fix:improve footer responsiveness on smaller screens

--- a/doc/assets/scss/_styles_project.scss
+++ b/doc/assets/scss/_styles_project.scss
@@ -33,3 +33,36 @@
 .navbar-brand {
   font-family: "PT Mono", monospace;
 }
+
+@media (max-width: 996px) {
+
+  footer .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  footer [class^="col-"] {
+    width: 100% !important;
+    max-width: 100% !important;
+    text-align: center !important;
+    margin-bottom: 1.25rem;
+  }
+
+  footer ul.list-inline {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  footer ul.list-inline li {
+    margin: 0.4rem;
+  }
+
+  footer img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+}
